# product-data-odoo-crewai

./: CLAUDE.md  README.md  debug_attribute_misses.py  debug_data_combination.py  debug_full_matching.py  debug_variant_loop.py  debug_variant_matching.py  generate_missing_skus.py  pyproject.toml  test_variant_tool_direct.py  verify_missing_skus.py
.claude/: settings.local.json
db/: chroma.sqlite3
output/attributes/: attribute_summary.json  attributes.csv  existing_attributes_values.csv  new_attributes.csv
output/categories/: category_mappings.json  category_stats.json
output/cleaned/: cleaned_products.csv
output/hardware/: hardware_variants.csv
output/llm/: llm_parsed_results.json
output/parsed/: parsed_results.json  product_variants.csv  unclear_products.json
output/templates/: new_templates.csv  template_summary.json
output/variants/: missing_skus.csv  missing_skus.json  product_variant_import.csv  template_analysis.json  variant_generation_stats.json
output_bk/: cleaned_products.csv
output_bk/attributes/: attributes.csv  existing_attributes_values.csv
output_bk/categories/: category_stats.json
output_bk/hardware/: hardware_attributes.csv  hardware_processing_report.json  hardware_templates.csv
output_bk/merged/: attribute_candidates.json  product_templates.csv  product_variants.csv
output_bk/parsed/: unclear_products.json
output_bk/templates/: template_summary.json
output_bk/variants/: template_analysis.json  variant_generation_stats.json
src/product_data_odoo/: VWU_Product_List.csv  crew.py  (+12 more)
tests/: missing_skus.csv  products.csv
(+30 files in other folders)
