[project]
name = "product_data_odoo"
version = "0.1.0"
description = "product-data-odoo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0",
    "pandas>=2.0.0"
]

[project.scripts]
product_data_odoo = "product_data_odoo.main:run"
run_crew = "product_data_odoo.main:run"
train = "product_data_odoo.main:train"
replay = "product_data_odoo.main:replay"
test = "product_data_odoo.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
